name:                pauljoannon-com
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            pauljoannon.com
license:             LGPL-3
license-file:        LICENSE
author:              Paul Joannon
maintainer:          hello@pauljoannon.com
-- copyright:
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable pauljoannon-com
  main-is:             site.hs
  -- other-modules:
  -- other-extensions:
  build-depends:
    base >=4.7 && <4.8,
    time >= 1.4.2,
    tuple >= 0.3.0.2,
    hakyll >= 4.5.5.0
  -- hs-source-dirs:
  default-language:    Haskell2010