name:               pauljoannon
version:            0.2.0.0
author:             Paul Joannon
maintainer:         hello@pauljoannon.com
category:           Web
build-type:         Simple
cabal-version:      >= 1.10

executable pauljoannon
  main-is:          main.hs
  build-depends:    base == 4.*
                  , hakyll == 4.9.*
                  , filepath
                  , blaze-html
                  , containers
                  , process
  ghc-options:      -threaded -Wall
  default-language: Haskell2010
